# ecs

./: CMakeLists.txt
src/ecs/: CMakeLists.txt  component.cpp  component.h  components.h  ecs_time.h  entities.h  entity.cpp  entity.h  system.cpp  system.h  systems.h  world.cpp  world.h
src/ecs/components/: directionmovecomponent.cpp  directionmovecomponent.h  movecomponent.cpp  movecomponent.h  poscomponent.cpp  poscomponent.h
src/ecs/geometry/: angle.cpp  angle.h
src/ecs/systems/: movesystem.cpp  movesystem.h
src/ecs/util/: angle.cpp  angle.h  pos.cpp  pos.h  printable.h  speed.cpp  speed.h
tests/ecs/: CMakeLists.txt  entity_tests.h  main.cpp  movesystem_tests.h  pos_tests.h  poscomponent_tests.h  system_tests.h  world_tests.h
tests/ecs/mock/: component_mock.h  entity_mock.h  system_mock.h
